# VisCurate-

./: .gitignore  ClaudeCode.md  PROJECT_STATUS_REPORT.md  Project_Pipeline.md  Project_Pipeline_Old.md  README.md  WORK_PROCESS_OVERVIEW.md  claude.md  mermaid.md  phase4_run.sh  pyproject.toml  requirements.txt  run.sh  run_openai_curation_sweep.sh  run_vllm_curation_sweep.sh  run_vllm_model_queue.sh  run_vllm_small_model_queue.sh  smoke_vllm_models.sh  start_vlm.sh
.github/workflows/: ci.yml
configs/: corruption.yaml  default.yaml  ground_truth_g0.yaml  param_alignment.yaml  phase9.yaml  probes.yaml  probes_smoke.yaml  queries.yaml
docs/: phase_summaries.md
src/viscurate/: __init__.py  cli.py  config.py  logging.py  rng.py
src/viscurate/baselines/: __init__.py  judges.py
src/viscurate/benchmark/: __init__.py  ground_truth.py  human_review.py  metrics.py  report.py  runner.py  tracks.py
src/viscurate/corruption/: __init__.py  apply.py  grid.py  mutators.py  plan.py  qa.py  types.py
src/viscurate/curation/: __init__.py  _hardened_worker.py  actions.py  agent.py  environment.py  gating.py  hardened.py  sandbox.py  state.py
src/viscurate/downstream/: __init__.py  build.py  evaluate.py  predicates.py  query.py  report.py  solver.py  usage.py
src/viscurate/equivalence/: __init__.py  backends.py  calibrate.py  candidates.py  compare.py  complementary.py  param_alignment.py  relations.py  subsumption.py  taxonomy.py
src/viscurate/experiments/: __init__.py  audit.py  config.py  manifest.py  runner.py
src/viscurate/probes/: __init__.py  build.py  coco.py  manifest.py  oracle.py  synthetics.py
src/viscurate/skills/: __init__.py  _testkit.py  _worker.py  canonicalize.py  executor.py  model.py  registry.py
src/viscurate/studies/: __init__.py  metrics.py  report.py
tests/: conftest.py  test_baselines.py  test_benchmark.py  test_canonicalize.py  test_config.py  test_corruption.py  test_curation.py  test_downstream.py  test_equivalence.py  test_equivalence_ml.py  test_executor.py  test_experiments.py  test_model.py  test_probes.py  test_registry.py  test_rng.py  test_skills.py  test_studies.py
